--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git://github.com/chaplinjs/chaplin.git"
   },
   "engines": {
-    "node": ">=0.4.6"
+    "node": ">= 0.4.6 < 0.7"
   },
   "main": "./build/chaplin.js"
 }
