--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   "engines": {
     "node": ">= 0.4.6 < 0.9"
   },
-  "main": "./build/chaplin.js"
+  "main": "./build/chaplin.js",
+  "devDependencies": {
+    "coffee-script": "1.4.x",
+    "mocha-phantomjs": "1.0.x"
+  },
+  "scripts": {
+    "test": "cake test && mocha-phantomjs test/index.html"
+  }
 }
