First crack at adding code coverage.
A few things:
 - Moved test/lib to test/vendor
 - Added test/lib back for js modules used in the testing process
   that are not external
 - Added 'cover' task to the Cakefile

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "devDependencies": {
     "coffee-script": "1.4.x",
     "mocha-phantomjs": "1.0.x",
-    "shelljs": "0.0.x"
+    "shelljs": "0.0.x",
+    "jade": "0.27.x",
+    "visionmedia-jscoverage": "1.0.x",
+    "phantomjs": "0.2.x"
   },
   "scripts": {
     "test": "cake test && mocha-phantomjs -R dot test/index.html"
