--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,8 @@
 .DS_Store
 
 # Generated folders from build process
-/build/amd
-/build/commonjs
-
-# Generated files used during testing
-test/js
-!test/js/.gitkeep
+/build
+temp
 
 # Local package dependencies
 /node_modules
