--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-concat": "git://github.com/mehcode/grunt-contrib-concat.git#frozen",
     "grunt-contrib-copy": "git://github.com/concordusapps/grunt-contrib-copy.git",
     "grunt-contrib-compress": "0.3.x",
+    "grunt-bower-task": "0.1.x",
     "grunt-contrib-uglify": "git://github.com/concordusapps/grunt-contrib-uglify.git#frozen",
     "grunt-filesize": "0.0.x",
     "grunt-istanbul": "git://github.com/taichi/grunt-istanbul.git",
@@ -23,5 +24,9 @@
     "grunt-coffeelint": "0.0.x",
     "grunt-mocha": "git://github.com/concordusapps/grunt-mocha.git",
     "phantomjs": "1.8.x"
+  },
+  "scripts": {
+    "install": "grunt build",
+    "test": "grunt test"
   }
 }
