Fix build system; upgrade package dependencies.

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "devDependencies": {
     "grunt": "0.4.x",
     "grunt-contrib-coffee": "0.4.x",
-    "grunt-contrib-clean": "git://github.com/gruntjs/grunt-contrib-clean.git",
-    "grunt-contrib-concat": "git://github.com/gruntjs/grunt-contrib-concat.git",
+    "grunt-contrib-clean": "0.4.x",
+    "grunt-contrib-concat": "0.1.x",
     "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-compress": "git://github.com/gruntjs/grunt-contrib-compress.git",
+    "grunt-contrib-compress": "0.4.x",
     "grunt-contrib-watch": "0.1.4",
     "grunt-bower-task": "0.1.x",
-    "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git",
-    "grunt-istanbul": "git://github.com/taichi/grunt-istanbul.git",
+    "grunt-contrib-uglify": "0.2.x",
+    "grunt-istanbul": "0.2.x",
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
     "grunt-coffeelint": "0.0.x",
     "grunt-mocha": "0.2.x",
