--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
     "grunt-coffeelint": "0.0.x",
     "grunt-mocha": "0.2.x",
+    "temp": "0.5.x",
     "phantomjs": "1.8.x"
   },
   "main": "build/commonjs/chaplin.js",
