--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
     "grunt-coffeelint": "0.0.x",
     "grunt-mocha": "0.2.x",
-    "temp": "0.5.x",
+    "grunt-transbrute": "0.1.x",
+    "prompt": "0.2.x",
     "phantomjs": "1.8.x"
   },
   "main": "build/commonjs/chaplin.js",
