--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "chaplin",
-  "version": "0.10.0-pre",
+  "version": "0.10.0",
   "description": "An Application Architecture Using Backbone.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/chaplinjs/chaplin.git"
-  },
-  "engines": {
-    "node": ">= 0.4.6 < 0.9"
-  },
+  "repository": "git://github.com/chaplinjs/chaplin.git",
   "devDependencies": {
     "grunt": "0.4.x",
     "grunt-contrib-coffee": "0.4.x",
@@ -27,7 +21,7 @@
     "prompt": "0.2.x",
     "phantomjs": "1.8.x"
   },
-  "main": "build/commonjs/chaplin.js",
+  "main": "build/chaplin.js",
   "scripts": {
     "install": "grunt clean build",
     "test": "grunt clean prepare test"
