--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,14 @@
   "name": "chaplin",
   "version": "0.10.0",
   "dependencies": {
-    "mocha": "1.11.x",
+    "mocha": "1.13.x",
     "expect": "0.2.x",
-    "requirejs": "2.1.x",
     "jquery": "1.9.x",
-    "underscore": "1.4.x",
+    "lodash": "2.0.x",
     "backbone": "1.0.x",
-    "benchmark": "git://github.com/bestiejs/benchmark.js.git"
+    "benchmark": "git://github.com/bestiejs/benchmark.js.git",
+    "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
+    "requirejs": "~2.1.8"
   },
   "exportsOverride": {
     "mocha": {
@@ -26,9 +27,6 @@
     },
     "jquery": {
       ".": "jquery.js"
-    },
-    "underscore": {
-      ".": "underscore.js"
     }
   }
 }
