Fix promise tests: don't depend on $.Deferred.

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "backbone": "1.1.x",
     "benchmark": "git://github.com/bestiejs/benchmark.js.git",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
-    "requirejs": "~2.1.8"
+    "requirejs": "~2.1.8",
+    "davy": "~0.0.4"
   },
   "exportsOverride": {
     "mocha": {
