--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "benchmark": "git://github.com/bestiejs/benchmark.js.git",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
     "requirejs": "~2.1.8",
-    "davy": "~0.0.4"
+    "davy": "~0.0.4",
+    "exoskeleton": "~0.3.1"
   },
   "exportsOverride": {
     "mocha": {
