--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "An Application Architecture Using Backbone.js",
   "repository": "git://github.com/chaplinjs/chaplin.git",
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-contrib-coffee": "0.4.x",
-    "grunt-contrib-clean": "0.4.x",
-    "grunt-contrib-concat": "0.1.x",
-    "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-compress": "0.4.x",
-    "grunt-contrib-watch": "0.1.4",
-    "grunt-bower-task": "0.3.x",
-    "grunt-contrib-uglify": "0.2.x",
-    "grunt-istanbul": "0.2.x",
+    "grunt": "~0.4.4",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-compress": "~0.7.0",
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-istanbul": "~0.2.4",
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
-    "grunt-coffeelint": "0.0.x",
-    "grunt-mocha": "0.2.x",
+    "grunt-coffeelint": "~0.0.8",
+    "grunt-mocha": "~0.4.10",
     "grunt-transbrute": "~0.2.0",
-    "prompt": "0.2.x",
-    "phantomjs": "1.9.x"
+    "prompt": "~0.2.12",
+    "phantomjs": "~1.9.7-1"
   },
   "main": "build/chaplin.js",
   "scripts": {
