--- a/bower.json
+++ b/bower.json
@@ -2,24 +2,21 @@
   "name": "chaplin",
   "version": "1.0.0",
   "dependencies": {
-    "mocha": "1.13.x",
-    "expect": "0.2.x",
-    "jquery": "1.9.x",
-    "lodash": "2.3.x",
-    "backbone": "1.1.x",
+    "mocha": "~1.18.0",
+    "expect": "0.3.1",
+    "jquery": "~1.11.0",
+    "lodash": "~2.4.1",
+    "backbone": "~1.1.2",
     "benchmark": "git://github.com/bestiejs/benchmark.js.git",
-    "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
-    "requirejs": "~2.1.8",
-    "davy": "~0.0.4",
-    "exoskeleton": "~0.6.0"
+    "sinon": "http://sinonjs.org/releases/sinon-1.9.0.js",
+    "requirejs": "~2.1.11",
+    "davy": "~0.1.1",
+    "exoskeleton": "~0.6.3"
   },
   "exportsOverride": {
     "mocha": {
       "scripts/..": "mocha.js",
       "styles/..": "mocha.css"
-    },
-    "expect": {
-      ".": "expect.js"
     },
     "backbone": {
       ".": "backbone.js"
