--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "mocha": "~1.18.0",
-    "expect": "0.3.1",
+    "expect": "~0.3.1",
     "jquery": "~1.11.0",
     "lodash": "~2.4.1",
     "backbone": "~1.1.2",
