Modify bower conf to make the project installable with bower

--- a/bower.json
+++ b/bower.json
@@ -30,5 +30,10 @@
     "jquery": {
       ".": "jquery.js"
     }
-  }
+  },
+  "main": "build/chaplin.js",
+  "ignore": [
+    "src",
+    "test"
+  ]
 }
