--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt-istanbul": "0.2.x",
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
     "grunt-coffeelint": "0.0.x",
-    "grunt-mocha": "0.2.x",
+    "grunt-mocha": "0.4.11",
     "grunt-transbrute": "~0.2.0",
     "prompt": "0.2.x",
     "phantomjs": "1.9.x"
