--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
     "requirejs": "~2.1.8",
     "davy": "~0.0.4",
-    "Backbone.NativeView": "0.3.1",
+    "backbone.nativeview": "0.3.1",
     "exoskeleton": "~0.7.0"
   },
   "exportsOverride": {
