--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "mocha": "1.13.x",
     "expect": "0.2.x",
     "jquery": "1.9.x",
-    "lodash": "2.3.x",
+    "lodash": "^3.0.0",
     "backbone": "1.2.x",
     "benchmark": "git://github.com/bestiejs/benchmark.js.git",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
