--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "An Application Architecture Using Backbone.js",
   "repository": "git://github.com/chaplinjs/chaplin.git",
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-contrib-coffee": "0.10.x",
-    "grunt-contrib-clean": "0.4.x",
-    "grunt-contrib-concat": "0.1.x",
-    "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-compress": "0.4.x",
-    "grunt-contrib-watch": "0.1.4",
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-coffee": "0.13.x",
+    "grunt-contrib-clean": "~0.7.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-compress": "0.14.x",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-uglify": "~0.11.1",
     "grunt-bower-task": "0.4.x",
-    "grunt-contrib-uglify": "0.2.x",
-    "grunt-istanbul": "0.2.x",
     "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
-    "grunt-coffeelint": "0.0.x",
-    "grunt-mocha": "0.4.x",
-    "grunt-transbrute": "~0.2.0",
-    "prompt": "0.2.x",
+    "grunt-istanbul": "~0.6.1",
+    "grunt-coffeelint": "~0.0.13",
+    "grunt-mocha": "~0.4.15",
+    "grunt-transbrute": "0.2.x",
+    "prompt": "~0.2.14",
     "phantomjs": "1.9.x"
   },
   "main": "build/chaplin.js",
