Simplify grunt-urequire requirement

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-uglify": "~0.11.1",
     "grunt-bower-task": "0.4.x",
-    "grunt-urequire": "git://github.com/concordusapps/grunt-urequire",
     "grunt-istanbul": "~0.6.1",
+    "grunt-urequire": "concordusapps/grunt-urequire",
     "grunt-coffeelint": "~0.0.13",
     "grunt-mocha": "~0.4.15",
     "grunt-transbrute": "0.2.x",
