--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "grunt-contrib-uglify": "~0.11.1",
     "coffeeify": "~2.0.1",
     "jsdom": "~8.0.2",
-    "jsdom-global": "~1.6.1",
+    "jsdom-assign": "shvaikalesh/jsdom-assign",
     "coffee-script": "1.10.x",
     "mocha": "~2.4.5",
     "sinon": "~1.17.3",
