--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "chaplin",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "An Application Architecture Using Backbone.js",
   "repository": "git://github.com/chaplinjs/chaplin.git",
+  "dependencies": {
+    "backbone": "~1.3.3",
+    "underscore": "~1.8.3"
+  },
   "devDependencies": {
-    "backbone": "~1.2.3",
     "backbone.nativeview": "~0.3.3",
     "chai": "3.5.x",
     "coffee-coverage": "1.0.1",
@@ -26,8 +29,7 @@
     "mocha": "~2.4.5",
     "prompt": "~0.2.14",
     "sinon": "~1.17.3",
-    "sinon-chai": "2.8.x",
-    "underscore": "~1.8.3"
+    "sinon-chai": "2.8.x"
   },
   "main": "build/chaplin.js",
   "scripts": {
