Switch to rollup

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "chai": "3.5.x",
     "coffee-coverage": "1.0.1",
     "coffee-script": "1.11.x",
-    "coffeeify": "~2.0.1",
     "grunt": "~0.4.5",
-    "grunt-browserify": "~4.0.1",
     "grunt-cli": "~0.1.13",
     "grunt-coffeelint": "~0.0.15",
     "grunt-contrib-compress": "0.14.x",
@@ -22,12 +20,15 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-istanbul": "0.7.0",
     "grunt-mocha-test": "~0.12.7",
+    "grunt-rollup": "1.0.1",
     "grunt-transbrute": "0.2.x",
     "jquery": "2.2.x",
     "jsdom": "~8.0.2",
     "jsdom-assign": "shvaikalesh/jsdom-assign",
     "mocha": "~2.4.5",
     "prompt": "~0.2.14",
+    "rollup-plugin-coffee-script": "1.1.0",
+    "rollup-plugin-node-resolve": "2.0.0",
     "sinon": "~1.17.3",
     "sinon-chai": "2.8.x"
   },
