--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "An Application Architecture Using Backbone.js",
   "repository": "git://github.com/chaplinjs/chaplin.git",
   "dependencies": {
+    "babel-register": "6.18.0",
     "backbone": "~1.3.3",
     "underscore": "~1.8.3"
   },
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
     "backbone.nativeview": "~0.3.3",
     "chai": "3.5.x",
     "coffee-coverage": "1.0.1",
@@ -15,6 +17,8 @@
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-coffeelint": "~0.0.15",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-coffee": "florian-r/grunt-contrib-coffee",
     "grunt-contrib-compress": "0.14.x",
     "grunt-contrib-uglify": "~0.11.1",
     "grunt-contrib-watch": "~0.6.1",
@@ -38,5 +42,10 @@
     "coverage": "grunt coverage",
     "build": "grunt build"
   },
-  "license": "SEE LICENSE IN MIT-LICENSE.txt"
+  "license": "SEE LICENSE IN MIT-LICENSE.txt",
+  "babel": {
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
+  }
 }
