--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "backbone.nativeview": "~0.3.3",
-    "chai": "3.5.x",
+    "chai": "~4.0.2",
     "coffee-coverage": "1.0.1",
     "coffee-script": "1.10.x",
     "coffeeify": "~2.0.1",
