--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "backbone.nativeview": "~0.3.3",
     "chai": "~4.0.2",
     "coffee-coverage": "1.0.1",
-    "coffee-script": "1.10.x",
+    "coffee-script": "~1.12.6",
     "coffeeify": "~2.0.1",
     "grunt": "~0.4.5",
     "grunt-browserify": "~4.0.1",
@@ -24,9 +24,9 @@
     "grunt-mocha-test": "~0.12.7",
     "grunt-transbrute": "0.2.x",
     "jquery": "2.2.x",
-    "mocha": "~2.4.5",
     "jsdom": "~11.1.0",
     "jsdom-global": "~3.0.2",
+    "mocha": "~3.4.2",
     "prompt": "~0.2.14",
     "sinon": "~2.3.6",
     "sinon-chai": "~2.8.0"
