--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "devDependencies": {
     "backbone.nativeview": "~0.3.3",
     "chai": "~4.1.1",
-    "coffee-coverage": "1.0.1",
     "coffee-script": "~1.12.7",
-    "coffeeify": "~2.0.1",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "~4.0.1",
-    "grunt-cli": "~0.1.13",
-    "grunt-coffeelint": "~0.0.15",
-    "grunt-contrib-compress": "0.14.x",
-    "grunt-contrib-uglify": "~0.11.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-istanbul": "0.7.0",
+    "grunt": "~1.0.1",
+    "grunt-cli": "~1.2.0",
+    "grunt-coffeelint": "~0.0.16",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "~1.4.3",
+    "grunt-contrib-uglify": "~3.0.1",
+    "grunt-contrib-watch": "~1.0.0",
     "grunt-mocha-test": "~0.13.2",
-    "grunt-transbrute": "0.2.x",
+    "grunt-rollup": "~5.0.0",
+    "grunt-transbrute": "~1.0.1",
     "jquery": "2.2.x",
-    "jsdom": "~11.1.0",
+    "jsdom": "~11.2.0",
     "jsdom-global": "~3.0.2",
     "mocha": "~3.5.0",
     "prompt": "~0.2.14",
-    "sinon": "~2.3.6",
-    "sinon-chai": "~2.12.0"
+    "rollup-plugin-coffee-script": "~1.1.0",
+    "rollup-plugin-node-resolve": "~3.0.0",
+    "sinon": "~3.2.1",
+    "sinon-chai": "~2.13.0"
   },
   "main": "build/chaplin.js",
   "scripts": {
