drop clean task

--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "grunt": "~1.0.1",
     "grunt-cli": "~1.2.0",
     "grunt-coffeelint": "~0.0.16",
-    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compress": "~1.4.3",
     "grunt-contrib-uglify": "~3.0.1",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-mocha-test": "~0.13.2",
     "grunt-rollup": "~5.0.0",
     "grunt-transbrute": "~1.0.1",
-    "jquery": "2.2.x",
+    "jquery": "~2.2.0",
     "jsdom": "~11.2.0",
     "jsdom-global": "~3.0.2",
     "mocha": "~3.5.0",
